# infrared_turtle

./: README.md  run_ir_turtle.sh
catkin_ws/src/ir_turtle/: CMakeLists.txt  package.xml
catkin_ws/src/ir_turtle/launch/: ir_turtle.launch
catkin_ws/src/ir_turtle/src/: ir_turtle_node.cpp
